--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,1 @@
-<main>
-  <h1>Zoom WebSDK Sample Angular</h1>
-
-  <button (click)="getSignature()">Join Meeting</button>
-</main>
+<router-outlet></router-outlet>
